30-applications/Applications/ai/extras/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-postgres
spec:
  selector:
    app: ai-postgres
  ports:
    - port: 5432
      targetPort: 5432
